frontend-envoy.yaml
static_resources:
  listeners:
  - address:
      socket_address:
        address: 0.0.0.0
        port_value: 8000
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager
          codec_type: auto
          stat_prefix: ingress_http
          route_config:
            name: local_route
            virtual_hosts:
            - name: backend
              domains:
              - "*"
              routes:
              - match:
                  prefix: "/service1"
                route:
                  cluster: service1
                  prefix_rewrite: "/"
              - match:
                  prefix: "/service2"
                route:
                  cluster: service2
                  prefix_rewrite: "/"
              - match:
                  path: "/"
                    headers:
                      name: "x-route-to"
                      exact_match: "service2"
                  route:
                    cluster: service2
              - match:
                  path: "/"
                    headers:
                      name: "x-route-to"
                      exact_match: "service1"
                  route:
                    cluster: service1
          http_filters:
          - name: envoy.router
            typed_config: {}
  clusters:
  - name: service1
    connect_timeout: 1s
    type: static
    lb_policy: round_robin
    health-check:
      timeout: 1s
      interval: 10s
      unhealthy-treshhold: 3
      healthy-treshhold: 3
      http_health_check:
        path: "/"
    load_assignment:
      cluster_name: service1
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: 127.0.0.1
                port_value: 8010
  - name: service2
    connect_timeout: 1s
    type: static
    lb_policy: round_robin
    health-check:
      timeout: 1s
      interval: 10s
      unhealthy-treshhold: 3
      healthy-treshhold: 3
      http_health_check:
        path: "/"
    load_assignment:
      cluster_name: service2
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: 127.0.0.1
                port_value: 8020
admin:
  access_log_path: "/dev/null"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 8001
